objects/nFUSE__Plugin_Constants__mdt.object
<CustomObject>
    <description>This object houses additional nFUSE Integration plug-in configuration.</description>
    <fields>
        <fullName>nFUSE__App_Plugin__c</fullName>
        <description>Soft reference to the plugin associted to the constant</description>
        <label>Plugin Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Description__c</fullName>
        <description>Descriptions of the key and the ramification of the value</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Is_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Is_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag indicating the record&apos;s value is static organization wide for all transactions verse needing to be set for each instance of a transaction</description>
        <label>Is Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFUSE__Key__c</fullName>
        <description>The Key serves as identifier and a short description of the value</description>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Translation__c</fullName>
        <description>The translation(s) associated with the value(s); translations are separated by | (pipe)</description>
        <label>Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Value__c</fullName>
        <description>The value(s) of the constant; values are separated by | (pipe)</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Plugin Constant</label>
    <pluralLabel>Plugin Constants</pluralLabel>
</CustomObject>